@@ -913,6 +913,7 @@ about.text=jEdit is brought to you by\n\
 	Kristian Ovaska\n\
 	Krzysztof Krzyzaniak\n\
 	Lionel Fiol\n\
+	Magnus Henriksson\n\
 	Maik Schreiber\n\
 	Marc Rummel\n\
 	Marcelo Vanzin\n\
@@ -930,6 +931,7 @@ about.text=jEdit is brought to you by\n\
 	Michael Taft\n\
 	Mike Dillon\n\
 	Mike Hansen\n\
+	Mirco Bova\n\
 	Nils Krahnstoever\n\
 	Nitsan Vardi\n\
 	Ollie Rutherfurd\n\
